# CGTea

./: BasicDrawPane.cpp  BasicDrawPane.h  CGTeaApp.cpp  CGTeaApp.h  CGTeaFrame.cpp  CGTeaFrame.h  CGTeaSidebar.cpp  CGTeaSidebar.h  CMakeLists.txt  Config.h  ConjectureCheckerDialog.cpp  ConjectureCheckerDialog.h  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  README.md  SettingsDialog.cpp  SettingsDialog.h  const_values.h  datatypes.h  gtea.xpm  icon.xpm  pyproject.toml  setup.py  test.cpp  test.g6  test2.cpp  wxdraw.cpp  wxframe.h
.github/workflows/: ccpp.yml
BoostTest/: CMakeLists.txt  ConjectureCheckTest.cpp  GeneratorsTest.cpp  ReportsTest.cpp
BoostTestSrc/: ActionsTest.cpp  ConjectureCheckTest.cpp  GeneratorsTest.cpp  IOTest.cpp  ReportsTest.cpp
ConjectureCheck/: ConjectureCheck.cpp  ConjectureCheck.h  TeaTable.h
G6Format/: G6Format.cpp  G6Format.h
actions/: ActionInterface.h  Coloring.h  LineGraph.cpp  LineGraph.h
doc/: Doxyfile
generators/: Antiprism.h  Banana.h  Circle.h  Cmn.h  CocktailParty.h  Complete.h  Crown.h  Cycle.h  Flower.h  FriendshipGraph.h  Gear.h  GeneralizedPeterson.h  GeneratorInterface.h  Heawood.h  Helm.h  Kenser.h  Kmn.h  Kmno.h  Lollipop.h  Path.h  Pmn.h  PositionGenerators.h  Prism.h  Random.h  RandomTree.h  Regular.h  Star.h  Tadpole.h  Tree.h  Web.h  Wheel.h  antiprism.h  compute_force_directed.cpp  compute_force_directed.h  datatypes.h  point.h
python/: bindings.cpp
reports/: AdditiveHarary.h  AlgebraicConnectivity.cpp  AlgebraicConnectivity.h  AverageDegree.h  ChromaticNumber.cpp  ChromaticNumber.h  ConnectivityEccentricityIndex.cpp  ConnectivityEccentricityIndex.h  DegreeDistance.h  Density.h  Diameter.cpp  Diameter.h  DominationNumber.cpp  DominationNumber.h  EccentricityConnectivityIndex.h  EdgeDegree.h  EigenRelatedFunctions.h  GirthSize.cpp  GirthSize.h  GraphEnergy.cpp  GraphEnergy.h  GutmanIndex.h  Harary.cpp  Harary.h  HyperWienerIndex.cpp  HyperWienerIndex.h  KConnected.h  MWienerIndex.cpp  MaxCut.cpp  MaxCut.h  MaxDegree.h  MaxEigenValue.cpp  MaxEigenValue.h  MaxOfIndSets.h  MinDegree.h  MinEigenValue.cpp  MinEigenValue.h  MostarIndex.cpp  MultiplicativeHarary.cpp  NumConnectedComponents.h  (+36 more)
tests/: test_g6format.cpp  test_generator.cpp  test_index.cpp
